Improved Sensor tests; Refactored Sensor (SensorRandomImpl implements Sensor), CheckHardware